# local-tts-lab

./: .gitignore  README.md  pyproject.toml
docs/benchmarks/: 2026-03-20-first-compare-suite.md  benchmark-plan.md
docs/research/: 2026-03-20-apple-silicon-local-tts-first-pass.md
docs/runbooks/: kokoro-bringup-2026-03-20.md  kokoro-daemon-2026-03-20.md  kokoro-voice-sweeps-2026-03-21.md  melo-bringup-2026-03-20.md  next-steps.md
scripts/experiments/: kokoro_smoke.py  kokoro_voice_sweep.py  melo_smoke.py  run_compare_suite.sh  run_kokoro_english_voices.sh  run_kokoro_french_voices.sh
scripts/setup/: install_kokoro.sh  install_melo.sh
src/local_tts_lab/: __init__.py  backends.py  cli.py  kokoro_service.py  paths.py  presets.py
