[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "local-tts-lab"
version = "0.1.0"
description = "Apple Silicon local TTS research and benchmarking tools"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Remi and Codex" }
]
dependencies = []

[project.scripts]
local-tts = "local_tts_lab.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
